# RustPlayground

./: notes.txt
WebAssembly/: notes.txt
WebAssembly/testing/: Cargo.toml  LICENSE_MIT  index.html
book_examples/: README.md
book_examples/cheapo_request/: Cargo.toml
book_examples/mandelbrot/: Cargo.toml
book_examples/mandelbrot_colors/: Cargo.toml  examples.txt  mandelbrod_notes.txt
book_examples1/: README.md
book_examples1/actix-gcd/: Cargo.toml
book_examples1/async-chat/: Cargo.toml
book_examples1/async-chat/src/: lib.rs  utils.rs
book_examples1/block-on/: Cargo.toml
book_examples1/fingertips/: Cargo.toml
book_examples1/http-get/: Cargo.toml
book_examples1/mandelbrot_colors/: Cargo.toml
book_examples1/spawn-blocking/: Cargo.toml
book_examples2/: README.md
book_examples2/image_processing/: Cargo.toml
book_examples2/image_processing/src/imagix/: error.rs  resize.rs  stats.rs
book_examples2/rstat/: Cargo.toml
book_examples2/shared-state/: dirnames.txt
book_examples2/tui/: Cargo.toml
book_examples2/usb/: Cargo.toml
discordBot/: Cargo.toml  notes.txt
discordBot/src/: main.rs
exercises/: format_all.bat
exercises/exercise10_colorful_rope/: Cargo.toml
exercises/exercise11_roman_to_integer/: Cargo.toml
exercises/exercise12_longest_substring/: Cargo.toml
exercises/exercise13_valid_parentheses/: Cargo.toml
exercises/exercise14_substring_index/: Cargo.toml
exercises/exercise15_unique_occurence/: Cargo.toml
exercises/exercise16_len_of_last_word/: Cargo.toml
mandelbrot_colors/: Cargo.toml  mandelbrod_notes.txt
(+79 files in other folders)
