[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imagix"
path = "src/imagix/mod.rs"

[[bin]]
name = "imagecli"
path = "src/imagecli.rs"

[dependencies]
image = "0.25.1"
structopt = "0.3.26"
